# ai-escrow-freelancers

./: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
artifacts/contracts/src/WillEscrow.sol/: WillEscrow.dbg.json  WillEscrow.json
backend/: .env  ai_verification.py  app.py  escrow.db  requirements.txt
cache/: solidity-files-cache.json
contracts/: hardhat.config.js
contracts/cache/: solidity-files-cache.json
contracts/scripts/: deploy.js
contracts/src/: WillEscrow.sol
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/artifacts/contracts/src/WillEscrow.sol/: WillEscrow.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  metadata.ts  page.tsx
frontend/src/app/agent-analysis/: page.tsx
frontend/src/app/deposit/: page.tsx
frontend/src/app/escrows/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/app/jobs/[id]/edit/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/select-role/: page.tsx
frontend/src/app/withdraw/: page.tsx
frontend/src/components/: AIVerification.tsx  Navbar.tsx  WalletConnect.tsx
frontend/src/context/: UserRoleContext.tsx  Web3Context.tsx
frontend/src/contracts/: WillEscrow.json
frontend/src/lib/: client.ts
scripts/: deploy.js
scripts/scripts/: deploy.js
solana-client/: package-lock.json  package.json
solana-client/src/: client.ts  test.ts  types.ts
solana-program/: Cargo.toml
solana-program/src/: lib.rs
test/: will.test.js
